# learningMicroVMs

./: .gitignore  README.md  image_to_fs.sh  make_ext4.sh  snapshot-compare.sh
bubblewrap/: README.md  interface-listener.sh  internet-and-metadata-only-nft.sh  internet-and-metadata-only.sh  limit-resources.sh  prepared-interface-limit-resources.sh  prepared-interface.sh  with-internet-no-localhost.sh
checkpoint-podman/: run.sh
checkpointing/: run.sh
checkpointing-runc/: config.json  install.sh
cloud-hypervisor/: README.md  common.sh  dl_reqs.sh  spawn.sh
cloud-hypervisor/with_custom_virtiofs/: README.md  spawn.sh  stop.sh
cloud-hypervisor/with_custom_virtiofs/custom-virtiofsd/: Cargo.toml
cloud-hypervisor/with_custom_virtiofs/custom-virtiofsd/src/: main.rs
cloud-hypervisor/with_metadata/: README.md  metadata-server.sh  spawn.sh
deno-criu/: README.md  install.sh  run-disconnected.sh  run.sh  snapshot-disconnected.sh  snapshot-leave-running.sh  snapshot.sh
firecracker/: README.md  common.sh  dl_reqs.sh  server.sh  spawn.sh
overcommit-demo/: README.md  demo.sh
runc-network/: init.sh  network-setup.sh  run.sh
runsc/: README.md  cpu.sh  ext4-runsc.sh  python-server.sh  run.sh
runsc-network/: Dockerfile  README.md  checkpoint.sh  config.json  config.json.bak  counter.ts  init.sh  install.sh  network-setup.sh  run.sh
testing-bwrap/: README.md  install.sh  internet-only.sh  pinger.ts  run.sh  thing.sh
unikernels/: Dockerfile  README.md  build-and-dump.sh  kraft-firecracker-manual.sh  kraft-firecracker.sh  kraft-qemu.sh  larger-qemu.sh  rust-qemu.sh
(+24 files in other folders)
